--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -18,7 +18,7 @@
             <div class="card-body">
                 <h5 class="card-title"><%= campground.title %> </h5>
 
-                <p class="card-text"><%= campground.description %></p>
+                <p class="card-text"><%= campground.descriptionsubstring(0, 200) %></p>
                 <p class="card-text">
                     <small class="text-muted"><%= campground.location%></small>
                 </p>
